# Flask-Synapse-Token-Register

./: .gitignore  LICENSE.md  MANIFEST.in  README.md  config.json.example  pyproject.toml
.github/workflows/: python-tests.yml
src/flask_synapse_token_register/: __init__.py  app.py  auth_session.py  cli.py  config.py  tokens.py  utils.py  validation.py  wsgi.py
src/flask_synapse_token_register/db/: __init__.py  admin.py  connection.py  migration.py  secrets.py  tokens.py
src/flask_synapse_token_register/db/schema/: _001_initial_schema.py  __init__.py
src/flask_synapse_token_register/routes/: __init__.py  admin.py  og_static.py  public.py  success.py
src/flask_synapse_token_register/static/css/: style.css
src/flask_synapse_token_register/templates/: admin_login.html  base.html  change_password.html  error.html  manage_tokens.html  register.html  success.html
tests/: conftest.py
tests/functional/: test_01_admin_actions.py
tests/integration/: test_01_routes.py  test_02_cli.py  test_03_wsgi.py
tests/unit/: test_01_config.py  test_02_test_mode.py  test_03_test_utils.py  test_04_database_operation_connection.py  test_05_database_operation_tokens.py  test_06_database_operation_migration.py  test_07_token_generation_validataion.py  test_08_database_operation_secrets.py  test_09_database_operation_admin.py  test_10_database_schema.py  test_11_validataion_logic.py  test_12_authentication_logic.py  test_13_routes.py
